@@ -86,6 +86,7 @@ test/reports/*.xml
 test/*.trs
 test/region.reg
 test/test_python.sh
+test/test_csv*.dat
 
 examples/python/*.xml
 examples/python/*.html
