@@ -28,7 +28,10 @@
 #include "GCsv.hpp"
 #include "GTools.hpp"
 %}
-%include stl.i
+%include "stl.i"
+%include "std_vector.i"
+%template(vectors) std::vector<std::string>;
+
 
 /***********************************************************************//**
  * @brief Tuple to index conversion to provide element access.
@@ -100,6 +103,7 @@ public:
     const int&  nrows(void) const;
     const int&  precision(void) const;
     void        precision(const int& precision);
+    void        append(const std::vector<std::string>& list);
     std::string string(const int& row, const int& col) const;
     double      real(const int& row, const int& col) const;
     int         integer(const int& row, const int& col) const;
