@@ -1,0 +1,5 @@
+ra,dec,duration
+10.0,-12.0,1800.0
+12.0,-10.0,1000.0
+14.0,-8.0,100.0
+
