@@ -24,6 +24,7 @@ The following methods have been added to the public interface:
 - GFilaname::protocol()
 - GFilename::path()
 - GFilename::file()
+- GCsv::append()
 - GModelSky::spatial()
 - GModelSky::spectral()
 - GModelSky::temporal()
@@ -227,6 +228,9 @@ safe (#1717).
 
 The gammalib::number() function was added to convert a singular noun into
 a plural noun is the number of instances of the noun is not one (#1743).
+
+The GCsv::append() method appends a list of strings to a CSV file. This allow
+easy creation of a CSV file, in particular from Python lists (#1773).
 
 
 14. XML module
